# FiniteAutomata

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/finite_automata/: NonDeterministicToDeterministicBenchmark.cpp
files/: drawing.dot
src/: CMakeLists.txt  CharsetInfo.h
src/cli/: FiniteAutomataReader.cpp  FiniteAutomataReader.h  NonDeterministicFiniteAutomataReader.cpp  NonDeterministicFiniteAutomataReader.h
src/regex/: CustomRegex.cpp  CustomRegex.h  Regex.h  RegexNodes.h  RegexParser.cpp  RegexParser.h  RegexPrinter.cpp  RegexPrinter.h
src/weaponry/: CharsetInfo.h  DeterministicFiniteAutomata.cpp  DeterministicFiniteAutomata.h  FiniteAutomata.cpp  FiniteAutomata.h  FiniteAutomataPrinter.cpp  FiniteAutomataPrinter.h  NonDeterministicFiniteAutomata.cpp  NonDeterministicFiniteAutomata.h
src/weaponry/converters/: DeterministicToMinimal.cpp  DeterministicToRegex.cpp  NonDeterministicToDeterministic.cpp  NonDeterministicToDeterministic.h
src/weaponry/parts/: AutomataEquivalenceCheck.cpp  DeterministicToMinimal.cpp  DeterministicToRegex.cpp  NonDeterministicToDeterministic.cpp
tests/: CMakeLists.txt  RegexStrings.cpp  RegexStrings.h
tests/cli/: FAReaderTests.cpp
tests/finite_automata/: AutomataToRegexTests.cpp  ComplementTests.cpp  FiniteAutomataRegexTests.cpp  LanguagesEqualityTests.cpp  MinimalAutomataTests.cpp  NonDeterministicToDeterministicTests.cpp  RegexStrings.cpp
tests/regex/: RegexOptimizationTests.cpp  RegexParserTests.cpp
tests/unit/finite_automata/: FiniteAutomataRegexTests.cpp  MinimalAutomataTests.cpp  NonDeterministicToDeterministicTests.cpp  RegexStrings.cpp  RegexStrings.h
tests/unit/regex/: RegexParserTestCase.h  RegexParserTests.cpp
tests/weaponry/: AutomataPrinterTests.cpp  AutomataToRegexTests.cpp  ComplementTests.cpp  LanguagesEqualityTests.cpp  MinimalAutomataTests.cpp  NonDeterministicTests.cpp  NonDeterministicToDeterministicTests.cpp
